--- a/Dockerfile.fly
+++ b/Dockerfile.fly
@@ -1,7 +1,7 @@
+# Dockerfile development version
 FROM ruby:3.0.2
 
-ENV LANG C.UTF-8
-
+# Install yarn
 RUN curl -sL https://deb.nodesource.com/setup_14.x | bash \
  && apt-get update && apt-get install -y nodejs && rm -rf /var/lib/apt/lists/* \
  && curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
@@ -13,11 +13,11 @@ EXPOSE 3000
 RUN mkdir /project
 WORKDIR /project
 
-COPY Gemfile Gemfile.lock ./
-RUN bundle install
-
-# COPY package.json *yarn* ./
-RUN yarn install --ignore-optional
-RUN yarn install --check-files
-
 COPY . .
+RUN bundle install
+RUN yarn install
+
+
+# Start server
+RUN rm -f /project/tmp/pids/server.pid
+CMD ["./bin/rails", "server"]
